--- a/src/pages/snart-slutt.less
+++ b/src/pages/snart-slutt.less
@@ -15,4 +15,10 @@
             border-color: @navds-global-color-gray-200;
         }
     }
+
+    .veiledning-knapp {
+        .navds-button__inner {
+            margin: 0 17px 0 17px;
+        }
+    }
 }
