--- a/src/components/snart-slutt/snartslutt.less
+++ b/src/components/snart-slutt/snartslutt.less
@@ -62,11 +62,15 @@
     }
 
     .info-panel--blue {
-        background-color: @navds-global-color-blue-50;
-        border-color: @navds-global-color-deepblue-500;
+        background-color: @navds-global-color-lightblue-50;
+        border-color: @navds-semantic-color-feedback-info-border;
         border-radius: 5px;
         padding: 2rem;
         margin-bottom: 4.5rem;
-        margin-top: 4rem;
+        margin-top: 2.5rem;
+    }
+
+    .back-link {
+        margin-top: 3rem;
     }
 }
