--- a/src/pages/snart-slutt.less
+++ b/src/pages/snart-slutt.less
@@ -4,7 +4,7 @@
     .byttjobb,
     .okonomien {
         margin: 1rem 0;
-        border: 1px solid @navds-global-color-gray-400;
+        border: 1px solid var(--a-gray-400);
         border-radius: 4px;
     }
 
@@ -12,7 +12,7 @@
         margin: 1rem 0;
 
         .navds-guide-panel__content {
-            border-color: @navds-global-color-gray-200;
+            border-color: var(--a-gray-200);
         }
     }
 
