--- a/src/components/snart-slutt/snartslutt.less
+++ b/src/components/snart-slutt/snartslutt.less
@@ -46,7 +46,7 @@
     .icon-circle {
         height: 64px;
         width: 64px;
-        background-color: @navds-global-color-blue-50;
+        background-color: var(--a-blue-50);
         border-radius: 50%;
         font-size: 28px;
         display: flex;
@@ -62,8 +62,8 @@
     }
 
     .info-panel--blue {
-        background-color: @navds-global-color-lightblue-50;
-        border-color: @navds-semantic-color-feedback-info-border;
+        background-color: var(--a-lightblue-50);
+        border-color: var(--a-border-info);
         border-radius: 5px;
         padding: 2rem;
         margin-bottom: 4.5rem;
