Revert less changes

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -7,7 +7,7 @@
 
 body {
     margin: 0;
-    color: var(--a-gray-800);
+    color: @navds-global-color-gray-800;
 }
 
 html,
@@ -42,13 +42,13 @@ body,
     }
 
     .limit {
-        background-color: var(--a-white);
+        background-color: @navds-global-color-white;
         padding-top: 1rem;
     }
 }
 
 a {
-    color: var(--a-surface-action);
+    color: @navds-semantic-color-interaction-primary;
 }
 
 .navno-dekorator .login-knapp.navds-button--secondary {
@@ -88,7 +88,7 @@ a {
 
 button.lenke {
     background: 0;
-    color: var(--a-surface-action);
+    color: @navds-semantic-color-interaction-primary;
     text-decoration: underline;
     border: 0;
     padding: 0;
