--- a/src/components/bjorn/bjorn.less
+++ b/src/components/bjorn/bjorn.less
@@ -11,7 +11,7 @@
 .hjelpeboble__boble {
     position: relative;
     border-radius: 0.5rem;
-    background-color: var(--a-gray-100);
+    background-color: @navds-semantic-color-canvas-background;
     padding: 1rem 2rem;
     margin-bottom: 1.5rem;
 
@@ -27,7 +27,7 @@
 }
 
 .hjelpeboble__boble--hvit {
-    background-color: var(--a-white);
+    background-color: @navds-global-color-white;
 }
 
 .hjelpeboble__bilde {
@@ -55,7 +55,7 @@
 .hjelpeboble__bilde:after {
     content: '';
     border: 1em solid transparent;
-    border-top-color: var(--a-gray-100);
+    border-top-color: @navds-global-color-gray-200;
     width: 0;
     height: 0;
     display: block;
@@ -66,7 +66,7 @@
 }
 
 .hjelpeboble__bilde--hvit:after {
-    border-top-color: var(--a-white);
+    border-top-color: @navds-global-color-white;
 }
 
 @media (min-width: 30em) {
@@ -94,11 +94,11 @@
         top: 25%;
         right: 1rem;
         border-top-color: transparent;
-        border-right-color: var(--a-gray-100);
+        border-right-color: @navds-global-color-gray-100;
         transform: translateX(50%);
     }
 
     .hjelpeboble__bilde--horisontal.hjelpeboble__bilde--hvit:after {
-        border-right-color: var(--a-white);
+        border-right-color: @navds-global-color-white;
     }
 }
