--- a/src/components/brodsmuler/brodsmuler.less
+++ b/src/components/brodsmuler/brodsmuler.less
@@ -25,7 +25,7 @@
         .opp-pil {
             display: block;
             margin-right: 0.5rem;
-            color: var(--a-surface-action);
+            color: @navds-semantic-color-interaction-primary;
         }
     }
 
@@ -60,7 +60,7 @@
     .js-toggle {
         border: 0;
         padding: 0 0.5rem;
-        color: var(--a-surface-action);
+        color: @navds-semantic-color-interaction-primary;
         cursor: pointer;
 
         &:focus {
