Fix wcag violations

--- a/src/components/brodsmuler/brodsmuler.less
+++ b/src/components/brodsmuler/brodsmuler.less
@@ -4,7 +4,7 @@
 .brodsmuler {
     max-height: 40px;
     padding: 8px 0 8px 1rem;
-    margin-bottom: 1em;
+    margin: 1em 0;
 
     .limit {
         display: flex;
