--- a/src/components/app.less
+++ b/src/components/app.less
@@ -1,5 +1,5 @@
-@import '../../node_modules/@navikt/ds-tokens/dist/tokens';
-@import './basic';
+@import "../../node_modules/@navikt/ds-tokens/dist/tokens";
+@import "./basic";
 
 * {
     box-sizing: border-box;
