--- a/src/components/bjorn/bjorn.less
+++ b/src/components/bjorn/bjorn.less
@@ -1,4 +1,4 @@
-@import "../../../node_modules/@navikt/ds-tokens/dist/tokens";
+@import '../../../node_modules/@navikt/ds-tokens/dist/tokens';
 
 .hjelpeboble {
     position: relative;
@@ -53,7 +53,7 @@
 }
 
 .hjelpeboble__bilde:after {
-    content: "";
+    content: '';
     border: 1em solid transparent;
     border-top-color: @a-gray-200;
     width: 0;
