--- a/src/components/brodsmuler/brodsmuler.less
+++ b/src/components/brodsmuler/brodsmuler.less
@@ -1,5 +1,5 @@
-@import "../../../node_modules/@navikt/ds-tokens/dist/tokens";
-@import "../basic";
+@import '../../../node_modules/@navikt/ds-tokens/dist/tokens';
+@import '../basic';
 
 .brodsmuler {
     max-height: 40px;
@@ -40,7 +40,7 @@
         padding-right: 0.5rem;
 
         &:after {
-            content: "/";
+            content: '/';
             margin-left: 0.5rem;
         }
 
@@ -49,7 +49,7 @@
         }
 
         &:last-child:after {
-            content: "";
+            content: '';
         }
 
         .lenke {
