--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,1 +1,4 @@
-@import '~@navikt/ds-css/dist/index.css';
+@import 'tailwindcss/base';
+@import '@navikt/ds-css';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
